@@ -408,9 +408,7 @@ BOOLEAN InitNewGame( BOOLEAN fReset )
 	// IF our first time, go into laptop!
 	if ( gubScreenCount == 0 )
 	{
-		//Init the laptop here
 		InitLaptopAndLaptopScreens();
-
 		InitStrategicLayer();
 
 		// Set new game flag
